form text label wrap fix

--- a/public/form.css
+++ b/public/form.css
@@ -28,6 +28,7 @@ body {
     align-items: center;
     gap: 10px;
     display: flex;
+    text-wrap: nowrap;
 }
 
 input[type="text"] {
